--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,10 +2,15 @@
 $body-bg: #f8fafc;
 $default-text-color: #1B192F;
 $white: #fff;
-$light-gray: #ddd;  
+$light-gray: #ddd;
+$lighter-gray: #eaeaea;  
 $medium-gray: #808080;
 $dark-gray: #1c232c;
 $metal-gray: #343a40;
+$accent-gray: #566f86;
+$dark-red: #6e0000;
+$light-red: #b42d3a;
+$lighter-red: #ce8483;
 
 // Typography variables
 $body-font: 'Open Sans', Arial, Helvetica, sans-serif;
