--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSans-Extrabold.woff2') format('woff2'),
-      url('../OpenSans-Extrabold.woff') format('woff');
+  src: url('../fonts/OpenSans-Extrabold.woff2') format('woff2'),
+      url('../fonts/OpenSans-Extrabold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSans-Bold.woff2') format('woff2'),
-      url('../OpenSans-Bold.woff') format('woff');
+  src: url('../fonts/OpenSans-Bold.woff2') format('woff2'),
+      url('../fonts/OpenSans-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSans-Semibold.woff2') format('woff2'),
-      url('../OpenSans-Semibold.woff') format('woff');
+  src: url('../fonts/OpenSans-Semibold.woff2') format('woff2'),
+      url('../fonts/OpenSans-Semibold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSans-Light.woff2') format('woff2'),
-      url('../OpenSans-Light.woff') format('woff');
+  src: url('../fonts/OpenSans-Light.woff2') format('woff2'),
+      url('../fonts/OpenSans-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSans-BoldItalic.woff2') format('woff2'),
-      url('../OpenSans-BoldItalic.woff') format('woff');
+  src: url('../fonts/OpenSans-BoldItalic.woff2') format('woff2'),
+      url('../fonts/OpenSans-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSans-ExtraboldItalic.woff2') format('woff2'),
-      url('../OpenSans-ExtraboldItalic.woff') format('woff');
+  src: url('../fonts/OpenSans-ExtraboldItalic.woff2') format('woff2'),
+      url('../fonts/OpenSans-ExtraboldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSansLight-Italic.woff2') format('woff2'),
-      url('../OpenSansLight-Italic.woff') format('woff');
+  src: url('../fonts/OpenSansLight-Italic.woff2') format('woff2'),
+      url('../fonts/OpenSansLight-Italic.woff') format('woff');
   font-weight: 300;
   font-style: italic;
   font-display: swap;
@@ -63,8 +63,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSans-Italic.woff2') format('woff2'),
-      url('../OpenSans-Italic.woff') format('woff');
+  src: url('../fonts/OpenSans-Italic.woff2') format('woff2'),
+      url('../fonts/OpenSans-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -72,8 +72,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSans.woff2') format('woff2'),
-      url('../OpenSans.woff') format('woff');
+  src: url('../fonts/OpenSans.woff2') format('woff2'),
+      url('../fonts/OpenSans.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -81,8 +81,8 @@
 
 @font-face {
   font-family: 'Source Sans Pro';
-  src: url('../SourceSansPro-BoldIt.woff2') format('woff2'),
-      url('../SourceSansPro-BoldIt.woff') format('woff');
+  src: url('../fonts/SourceSansPro-BoldIt.woff2') format('woff2'),
+      url('../fonts/SourceSansPro-BoldIt.woff') format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -90,8 +90,8 @@
 
 @font-face {
   font-family: 'Source Sans Pro';
-  src: url('../SourceSansPro-Regular.woff2') format('woff2'),
-      url('../SourceSansPro-Regular.woff') format('woff');
+  src: url('../fonts/SourceSansPro-Regular.woff2') format('woff2'),
+      url('../fonts/SourceSansPro-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -99,8 +99,8 @@
 
 @font-face {
   font-family: 'Source Sans Pro';
-  src: url('../SourceSansPro-BlackIt.woff2') format('woff2'),
-      url('../SourceSansPro-BlackIt.woff') format('woff');
+  src: url('../fonts/SourceSansPro-BlackIt.woff2') format('woff2'),
+      url('../fonts/SourceSansPro-BlackIt.woff') format('woff');
   font-weight: 900;
   font-style: italic;
   font-display: swap;
@@ -108,8 +108,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../OpenSans-SemiboldItalic.woff2') format('woff2'),
-      url('../OpenSans-SemiboldItalic.woff') format('woff');
+  src: url('../fonts/OpenSans-SemiboldItalic.woff2') format('woff2'),
+      url('../fonts/OpenSans-SemiboldItalic.woff') format('woff');
   font-weight: 600;
   font-style: italic;
   font-display: swap;
@@ -117,8 +117,8 @@
 
 @font-face {
   font-family: 'Source Sans Pro';
-  src: url('../SourceSansPro-Black.woff2') format('woff2'),
-      url('../SourceSansPro-Black.woff') format('woff');
+  src: url('../fonts/SourceSansPro-Black.woff2') format('woff2'),
+      url('../fonts/SourceSansPro-Black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -126,8 +126,8 @@
 
 @font-face {
   font-family: 'Source Sans Pro';
-  src: url('../SourceSansPro-Bold.woff2') format('woff2'),
-      url('../SourceSansPro-Bold.woff') format('woff');
+  src: url('../fonts/SourceSansPro-Bold.woff2') format('woff2'),
+      url('../fonts/SourceSansPro-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -135,8 +135,8 @@
 
 @font-face {
   font-family: 'Source Sans Pro';
-  src: url('../SourceSansPro-Semibold.woff2') format('woff2'),
-      url('../SourceSansPro-Semibold.woff') format('woff');
+  src: url('../fonts/SourceSansPro-Semibold.woff2') format('woff2'),
+      url('../fonts/SourceSansPro-Semibold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
