--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,10 +1,24 @@
-// Variables
-$body-bg: #f8fafc;
+@import './variables';
+
+body {
+  background: $body-bg;
+}
 
 #app {
-  background: $body-bg;
-  height: auto;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  height: auto;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 100%;
+  } 
+}
+
+@media (min-width: 1366px) {
+  .container {
+    max-width: 1280px;
+  } 
 }
