--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -11,3 +11,17 @@ h4 {
   font-family: $heading-font;
 }
 
+.article-title {
+	font-size: 2.5rem;
+	margin-bottom: .75rem;
+	color: $medium-gray;
+}
+
+.page-title {
+	font-size: 2rem;
+	margin-bottom: .5rem;
+  padding-bottom: .25rem;
+	color: $dark-gray;
+  border-bottom: 1px solid $light-gray;
+}
+
