--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -82,9 +82,9 @@
         padding-right: 10px;
         padding-left: 5px;
         .rounded-circle {
-          height: 82px;
+          height: 80px;
           width: auto;
-          background: #f7f7f7;
+          background: $white;
         }
       }
       .text {
