--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10588,9 +10588,8 @@ body {
 }
 .navbar .dropdown-menu {
   padding: 0;
-  border-radius: 0;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.11);
-  top: 49px;
+  top: 46px;
   border: none;
   background: transparent;
 }
@@ -10661,6 +10660,7 @@ body {
   .navbar .dropdown-menu {
     background: #fff;
     color: #fff;
+    border-radius: 0 0 0.125rem 0.125rem;
   }
   .navbar .dropdown-menu:after, .navbar .dropdown-menu:before {
     display: inline-block;
@@ -10747,9 +10747,9 @@ body {
   padding-left: 5px;
 }
 .tab-content .sidebar-list li .thumbnail .rounded-circle {
-  height: 82px;
+  height: 80px;
   width: auto;
-  background: #f7f7f7;
+  background: #fff;
 }
 .tab-content .sidebar-list li .text {
   padding-right: 5px;
@@ -10906,7 +10906,7 @@ h4,
   display: flex;
   flex-direction: column;
   background: #fff;
-  border-radius: 0px;
+  border-radius: 0.25rem;
   transition: all 0.3s ease-in-out 0s;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.11) 0px 1px 2px;
 }
@@ -10915,6 +10915,7 @@ h4,
 }
 .articles-grid .thumbnail {
   overflow: hidden;
+  border-radius: 0.25rem 0.25rem 0 0;
 }
 .articles-grid .thumbnail img {
   display: block;
