--- a/scss/_articles-list.scss
+++ b/scss/_articles-list.scss
@@ -13,7 +13,7 @@
 		display: flex;
 		flex-direction: column;
 		background: $white;
-		border-radius: 0px;
+		border-radius: .25rem;
 		transition: all 0.3s ease-in-out 0s;
 		box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.11) 0px 1px 2px;
 		&:hover {
@@ -22,6 +22,7 @@
 	}
 	.thumbnail {
 		overflow: hidden;
+    border-radius: .25rem .25rem 0 0;
 		img {
 			display: block;
 			width: 100%;
