--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,5 +16,6 @@
 @import  './_typography';
 @import './_buttons';
 @import  './forms.scss';
+@import './_404.scss';
 @import './_articles-list';
 @import './_article.scss';
