--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10580,8 +10580,6 @@ body {
 .navbar .search_form button[type=submit] {
   border: 1px solid rgba(255, 255, 255, 0.04);
   border-left: 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
   background: #343a40;
   color: #808080;
   box-shadow: none !important;
@@ -10660,6 +10658,9 @@ body {
   .navbar .dropdown-menu {
     background: #fff;
     color: #fff;
+    -webkit-border-radius: 0 0 0.125rem 0.125rem;
+    -moz-border-radius: 0 0 0.125rem 0.125rem;
+    -ms-border-radius: 0 0 0.125rem 0.125rem;
     border-radius: 0 0 0.125rem 0.125rem;
   }
   .navbar .dropdown-menu:after, .navbar .dropdown-menu:before {
@@ -10812,7 +10813,7 @@ h4,
 .article-title {
   font-size: 2.5rem;
   margin-bottom: 0.75rem;
-  color: #808080;
+  color: #303c4b;
 }
 
 .page-title {
@@ -10823,7 +10824,10 @@ h4,
   border-bottom: 1px solid #ddd;
 }
 
-/* Forms */
+.btn.rounded-end {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+} /* Forms */
 .form-group {
   margin-bottom: 22px;
   position: relative;
@@ -10918,6 +10922,9 @@ h4,
   display: flex;
   flex-direction: column;
   background: #fff;
+  -webkit-border-radius: 0.25rem;
+  -moz-border-radius: 0.25rem;
+  -ms-border-radius: 0.25rem;
   border-radius: 0.25rem;
   transition: all 0.3s ease-in-out 0s;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.11) 0px 1px 2px;
@@ -10927,6 +10934,9 @@ h4,
 }
 .articles-grid .thumbnail {
   overflow: hidden;
+  -webkit-border-radius: 0.25rem 0.25rem 0 0;
+  -moz-border-radius: 0.25rem 0.25rem 0 0;
+  -ms-border-radius: 0.25rem 0.25rem 0 0;
   border-radius: 0.25rem 0.25rem 0 0;
 }
 .articles-grid .thumbnail img {
