--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -14,7 +14,7 @@ h4 {
 .article-title {
 	font-size: 2.5rem;
 	margin-bottom: .75rem;
-	color: $medium-gray;
+	color: lighten($dark-gray, 10%);
 }
 
 .page-title {
