--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10561,9 +10561,13 @@ body {
 .navbar {
   box-shadow: 0 3px 7px 0 rgba(21, 30, 38, 0.3);
 }
+.navbar .navbar-brand {
+  padding: 0;
+}
 .navbar .nav-link {
   color: #fff;
   font-size: 0.9rem;
+  text-transform: uppercase;
 }
 .navbar .btn {
   display: block;
@@ -10626,7 +10630,7 @@ body {
   border-color: transparent transparent rgba(0, 0, 0, 0.1);
 }
 .navbar .dropdown-menu .dropdown-item {
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem 0.75rem 0.5rem 1.25rem;
   font-size: 0.9rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
