--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -4,9 +4,14 @@
 .navbar {
   box-shadow: 0 3px 7px 0 rgba(21, 30, 38, 0.3);
 
+  .navbar-brand {
+    padding: 0;
+  }
+
   .nav-link {
     color: $white;
     font-size: $smaller-font;
+    text-transform: uppercase;
   }
 
   .btn {
@@ -76,7 +81,7 @@
     }
 
     .dropdown-item {
-      padding: .5rem .75rem;
+      padding: .5rem .75rem .5rem  1.25rem;
       font-size: $smaller-font; 
       border-bottom: 1px solid rgba(0, 0, 0, 0.12); 
       &:hover {
