--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -2,3 +2,21 @@
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
 }
+
+.social-buttons {
+  padding-top: 1rem;
+  .btn {
+    color: $white !important;
+    @include border-radius(.125rem);
+
+    &.facebook {
+      background: #306199;
+    }
+    &.twitter {
+      background: #26c4f1;
+    }
+    &.linkedin {
+      background: #005983;
+    }
+  }
+}
