--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10845,6 +10845,7 @@ h4,
 }
 .social-buttons .btn {
   color: #fff !important;
+  white-space: nowrap;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
   -ms-border-radius: 0.125rem;
@@ -11077,6 +11078,7 @@ main .img-thumbnail.float-left {
 }
 .article-meta a {
   text-decoration: none;
+  white-space: nowrap;
   color: #808080;
   font-weight: 500;
 }
@@ -11110,7 +11112,7 @@ main .img-thumbnail.float-left {
   font-size: 0.9rem;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 992px) {
   .right-half {
     display: none !important;
   }
