--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -44,6 +44,7 @@ main {
   }
 	a {
 		text-decoration: none;
+    white-space: nowrap;
 		color: $medium-gray;
 		font-weight: 500;
 	}
@@ -80,7 +81,7 @@ main {
 	}
 }
 
-@media (max-width: 767px) {
+@media (max-width: 992px) {
 	.right-half {
     display: none !important;
   }
