Do the newsletter form

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,8 @@
 @import './_pagination';
 @import  './_typography';
 @import './_buttons';
-@import  './forms.scss';
+@import  './_forms.scss';
+@import  './_newsletter.scss';
 @import './_404.scss';
 @import './_articles-list';
 @import './_article.scss';
