--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10684,7 +10684,7 @@ body {
   }
 }
 .tabbed-sidebar {
-  margin: 20px 0;
+  margin-top: 20px;
   border: 1px solid #ddd;
   background: #fff;
 }
@@ -10692,7 +10692,7 @@ body {
 .tabbed-heading {
   color: #1c232c;
   text-align: center;
-  padding: 4px 4px 0 4px;
+  padding: 0.25rem 0.25rem 0 0.25rem;
 }
 
 .nav-tabs {
@@ -10930,6 +10930,18 @@ h4,
 }
 .has-error .text {
   color: #6e0000 !important;
+}
+
+.newsletter {
+  margin-top: 20px;
+  padding: 15px;
+  border: 1px solid #ddd;
+  background: #fff;
+}
+.newsletter h3, .newsletter .h3 {
+  font-size: 1.25rem;
+  color: #566f86;
+  font-weight: 600;
 }
 
 .centered-content {
