--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -1,7 +1,7 @@
 @import './variables';
 
 .tabbed-sidebar {
-	margin: 20px 0;
+	margin-top: 20px;
 	border: 1px solid $light-gray;
   background: $white; 
 }
@@ -9,7 +9,7 @@
 .tabbed-heading {
   color: $dark-gray;
   text-align: center; 
-  padding: 4px 4px 0 4px;
+  padding: .25rem .25rem 0 .25rem;
 }
 
 .nav-tabs {
