--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10969,10 +10969,10 @@ h4,
   display: flex;
   flex-direction: column;
   background: #fff;
-  -webkit-border-radius: 0.25rem;
-  -moz-border-radius: 0.25rem;
-  -ms-border-radius: 0.25rem;
-  border-radius: 0.25rem;
+  -webkit-border-radius: 0 0 0.125rem 0.125rem;
+  -moz-border-radius: 0 0 0.125rem 0.125rem;
+  -ms-border-radius: 0 0 0.125rem 0.125rem;
+  border-radius: 0 0 0.125rem 0.125rem;
   transition: all 0.3s ease-in-out 0s;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.11) 0px 1px 2px;
 }
@@ -10981,10 +10981,10 @@ h4,
 }
 .articles-grid .thumbnail {
   overflow: hidden;
-  -webkit-border-radius: 0.25rem 0.25rem 0 0;
-  -moz-border-radius: 0.25rem 0.25rem 0 0;
-  -ms-border-radius: 0.25rem 0.25rem 0 0;
-  border-radius: 0.25rem 0.25rem 0 0;
+  -webkit-border-radius: 0.125rem 0.125rem 0 0;
+  -moz-border-radius: 0.125rem 0.125rem 0 0;
+  -ms-border-radius: 0.125rem 0.125rem 0 0;
+  border-radius: 0.125rem 0.125rem 0 0;
 }
 .articles-grid .thumbnail img {
   display: block;
