--- a/scss/_overwrites.scss
+++ b/scss/_overwrites.scss
@@ -15,5 +15,8 @@ $theme-colors: (
 //  Set link color
 $link-color: $success;
 
+// Set small radius
+$btn-border-radius-sm: .125rem;
+
 // Pagination
 $pagination-active-bg: $success !default;
