--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,16 +1,22 @@
 // Color variables
-$body-bg: #f8fafc;
-$default-text-color: #1B192F;
 $white: #fff;
 $light-gray: #ddd;
-$lighter-gray: #eaeaea;  
+$lighter-gray: #eaeaea;
 $medium-gray: #808080;
 $dark-gray: #1c232c;
 $metal-gray: #343a40;
 $accent-gray: #566f86;
+$dark: #1b192f;
 $dark-red: #6e0000;
 $light-red: #b42d3a;
 $lighter-red: #ce8483;
+$body-bg: #f8fafc;
+$default-text-color: #1b192f;
+
+// Bootstrap colors
+$primary: #2c82e6;
+$success: #008057;
+$danger: #bc133d;
 
 // Typography variables
 $body-font: 'Open Sans', Arial, Helvetica, sans-serif;
