--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,7 @@
   --bs-primary: #2c82e6;
   --bs-success: #008057;
   --bs-danger: #bc133d;
-  --bs-dark: #1B192F;
+  --bs-dark: #1b192f;
   --bs-primary-rgb: 44, 130, 230;
   --bs-success-rgb: 0, 128, 87;
   --bs-danger-rgb: 188, 19, 61;
@@ -152,7 +152,7 @@
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
-  --bs-body-bg-rgb: 255, 255, 255;
+  --bs-body-bg-rgb: 248, 250, 252;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
@@ -161,7 +161,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+  --bs-body-bg: #f8fafc;
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: #dee2e6;
@@ -701,7 +701,7 @@ progress {
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #fff;
+  background-color: #f8fafc;
   border: 1px solid var(--bs-border-color);
   border-radius: 0.375rem;
   max-width: 100%;
@@ -2010,7 +2010,7 @@ progress {
 
 .table-dark {
   --bs-table-color: #fff;
-  --bs-table-bg: #1B192F;
+  --bs-table-bg: #1b192f;
   --bs-table-border-color: #323044;
   --bs-table-striped-bg: #262539;
   --bs-table-striped-color: #fff;
@@ -2095,7 +2095,7 @@ progress {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  background-color: #f8fafc;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   appearance: none;
@@ -2115,7 +2115,7 @@ progress {
 }
 .form-control:focus {
   color: #212529;
-  background-color: #fff;
+  background-color: #f8fafc;
   border-color: #96c1f3;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(44, 130, 230, 0.25);
@@ -2238,7 +2238,7 @@ textarea.form-control-lg {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  background-color: #f8fafc;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
@@ -2313,7 +2313,7 @@ textarea.form-control-lg {
   height: 1em;
   margin-top: 0.25em;
   vertical-align: top;
-  background-color: #fff;
+  background-color: #f8fafc;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -2419,10 +2419,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(44, 130, 230, 0.25);
+  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.25rem rgba(44, 130, 230, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(44, 130, 230, 0.25);
+  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.25rem rgba(44, 130, 230, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2958,8 +2958,8 @@ textarea.form-control-lg {
 
 .btn-dark {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #1B192F;
-  --bs-btn-border-color: #1B192F;
+  --bs-btn-bg: #1b192f;
+  --bs-btn-border-color: #1b192f;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #3d3c4e;
   --bs-btn-hover-border-color: #323044;
@@ -2969,8 +2969,8 @@ textarea.form-control-lg {
   --bs-btn-active-border-color: #323044;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #1B192F;
-  --bs-btn-disabled-border-color: #1B192F;
+  --bs-btn-disabled-bg: #1b192f;
+  --bs-btn-disabled-border-color: #1b192f;
 }
 
 .btn-outline-primary {
@@ -3025,19 +3025,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-dark {
-  --bs-btn-color: #1B192F;
-  --bs-btn-border-color: #1B192F;
+  --bs-btn-color: #1b192f;
+  --bs-btn-border-color: #1b192f;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #1B192F;
-  --bs-btn-hover-border-color: #1B192F;
+  --bs-btn-hover-bg: #1b192f;
+  --bs-btn-hover-border-color: #1b192f;
   --bs-btn-focus-shadow-rgb: 27, 25, 47;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #1B192F;
-  --bs-btn-active-border-color: #1B192F;
+  --bs-btn-active-bg: #1b192f;
+  --bs-btn-active-border-color: #1b192f;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #1B192F;
+  --bs-btn-disabled-color: #1b192f;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #1B192F;
+  --bs-btn-disabled-border-color: #1b192f;
   --bs-gradient: none;
 }
 
@@ -3573,8 +3573,8 @@ textarea.form-control-lg {
   --bs-nav-tabs-border-radius: 0.375rem;
   --bs-nav-tabs-link-hover-border-color: #e9ecef #e9ecef #dee2e6;
   --bs-nav-tabs-link-active-color: #495057;
-  --bs-nav-tabs-link-active-bg: #fff;
-  --bs-nav-tabs-link-active-border-color: #dee2e6 #dee2e6 #fff;
+  --bs-nav-tabs-link-active-bg: #f8fafc;
+  --bs-nav-tabs-link-active-border-color: #dee2e6 #dee2e6 #f8fafc;
   border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
 }
 .nav-tabs .nav-link {
@@ -4258,7 +4258,7 @@ textarea.form-control-lg {
 
 .accordion {
   --bs-accordion-color: #212529;
-  --bs-accordion-bg: #fff;
+  --bs-accordion-bg: #f8fafc;
   --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
   --bs-accordion-border-color: var(--bs-border-color);
   --bs-accordion-border-width: 1px;
@@ -6523,7 +6523,7 @@ textarea.form-control-lg {
 }
 
 .link-dark {
-  color: #1B192F !important;
+  color: #1b192f !important;
 }
 .link-dark:hover, .link-dark:focus {
   color: #161426 !important;
