Put error font-size in a variable. Change comment header background color.

--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -75,6 +75,7 @@ main {
   overflow: hidden;
 	.card-header {
 		font-size: $smaller-font;
+    background: $body-bg;
 	}
 	p {
 		font-size: $smaller-font;
