--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -24,3 +24,4 @@ $line-height-base: 1.5;
 $heading-font: 'Source Sans Pro', Arial, sans-serif;
 $medium-font: 1.125rem;
 $smaller-font: .9rem;
+$error-font-size: 10px;
