--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10888,20 +10888,18 @@ h4,
   right: 5px;
   bottom: -13px;
   color: #6e0000;
-  font-size: 11px;
+  font-size: 10px;
 }
 .form-group label.error {
   margin: 0;
   position: absolute;
   right: 5px;
-  bottom: -13px;
+  bottom: 0;
   color: #b42d3a;
-  font-size: 11px;
+  font-size: 10px;
 }
 .form-group .error {
   border-color: #b42d3a;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
 .input-group .error-message {
@@ -10910,7 +10908,7 @@ h4,
   right: 5px;
   bottom: -13px;
   color: #b42d3a;
-  font-size: 11px;
+  font-size: 10px;
 }
 .input-group .search-error {
   margin: 0;
@@ -10918,7 +10916,7 @@ h4,
   bottom: 1px;
   right: 48px;
   color: #b42d3a;
-  font-size: 11px;
+  font-size: 10px;
 }
 
 .error-messages p {
@@ -10927,7 +10925,7 @@ h4,
   right: 5px;
   bottom: -13px;
   color: #b42d3a;
-  font-size: 11px;
+  font-size: 10px;
 }
 
 .has-error .form-control {
@@ -11132,6 +11130,7 @@ main .img-thumbnail.float-left {
 }
 .comment .card-header {
   font-size: 0.9rem;
+  background: #f8fafc;
 }
 .comment p {
   font-size: 0.9rem;
