--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -14,20 +14,18 @@
 		right: 5px;
 		bottom: -13px;
 		color: $dark-red;
-		font-size: 11px;
+		font-size: $error-font-size;
 	}
 	label.error {
 		margin: 0;
 		position: absolute;
 		right: 5px;
-		bottom: -13px;
+		bottom: 0;
 		color: $light-red;
-		font-size: 11px;
+		font-size: $error-font-size;
 	}
 	.error {
 		border-color: $light-red;
-		-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-		box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	}
 }
 .input-group {
@@ -37,7 +35,7 @@
 		right: 5px;
 		bottom: -13px;
 		color: $light-red;
-		font-size: 11px;
+		font-size: $error-font-size;
 	}
 	.search-error {
 		margin: 0;
@@ -45,7 +43,7 @@
 		bottom: 1px;
 		right: 48px;
 		color: $light-red;
-		font-size: 11px;
+		font-size: $error-font-size;
 	}
 }
 .error-messages {
@@ -55,7 +53,7 @@
 		right: 5px;
 		bottom: -13px;
 		color: $light-red;
-		font-size: 11px;
+		font-size: $error-font-size;
 	}
 }
 .has-error {
