--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -15,6 +15,8 @@
 .nav-tabs {
   display: flex;
   border-bottom: none;
+  overflow: hidden;
+  margin-bottom: -1px;
 
   li {
     -webkit-flex: 1;
@@ -24,12 +26,13 @@
 
   .nav-link {
     border: 1px solid $light-gray;
+    font-weight: 600;
     font-size: $smaller-font;
     color: $accent-gray;
-    font-weight: 600;
     &.active {
-      border-color: $light-gray $light-gray #fff;
       color: $success;
+      background: $white;
+      border-bottom-color: $white;
     }
   }
 }
