--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@ $metal-gray: #343a40;
 $accent-gray: #566f86;
 $dark: #1b192f;
 $dark-red: #6e0000;
-$light-red: #b42d3a;
+$light-red: #b43340;
 $lighter-red: #ce8483;
 $body-bg: #f8fafc;
 $default-text-color: #1b192f;
