Add Font Awesome styles to style.css

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,8 @@
+// Import  Font awesome icons
+@import  './_fontawesome';
+
 // Import fonts
-@import  './fonts';
+@import  './_fonts';
 
 //  Overwrite default scheme
 @import  './_overwrites';
