--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -3,6 +3,10 @@
   border-top-left-radius: 0;
 }
 
+.btn-success {
+  color: #fff !important; 
+}
+
 .social-buttons {
   padding-top: 1rem;
   margin-bottom: 0;
