--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -11,7 +11,8 @@ h4 {
   font-family: $heading-font;
 }
 
-.category-name {
+.category-name,
+.author-name {
   font-weight: 900;
   margin-top: 10px;
 }
