Change the bio formatting and photo size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21378,10 +21378,10 @@ div.author {
 div.author h1, div.author .h1 {
   order: 2;
   margin: 0 0 0 5px;
-  font-size: 1.75rem;
+  font-size: 2rem;
 }
 div.author img {
-  height: 40px;
+  height: 44px;
   width: auto;
 }
 
@@ -21390,10 +21390,11 @@ div.author img {
   border-left: 4px solid #808080;
   margin: 0.75em 0 2rem 0;
   padding: 0 0.75em;
+  font-size: 14px;
 }
 @media (min-width: 992px) {
   .bio {
-    width: 60%;
+    width: 70%;
   }
 }
 
