--- a/scss/_articles-list.scss
+++ b/scss/_articles-list.scss
@@ -89,7 +89,7 @@
 div.author {
   display: flex;
   align-items: center;
-  margin: 20px 0 0 0;
+  margin: 20px 0 0 6px;
   h1 {
     order: 2; 
     margin: 0 0 0 5px; 
