--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -80,7 +80,16 @@ main {
 	.card-header {
 		font-size: $smaller-font;
     background: $body-bg;
+    padding: 5px;
 	}
+  .avatar {
+    img {
+      width: 30px;
+      height: 30px;
+      display: inline-block;
+      margin-right: 5px;
+    }
+  }
 	p {
 		font-size: $smaller-font;
 	}
