--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -75,6 +75,7 @@ main {
 		}
 	}
 }
+  
 .comment {
   overflow: hidden;
   margin-bottom: 15px;
@@ -97,6 +98,24 @@ main {
 	p {
 		font-size: $smaller-font;
 	}
+}
+
+.comment-actions {
+  display: flex;
+  justify-content: right;
+  margin: 0;
+
+  li {
+    margin-right: 10px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  a {
+    text-decoration: none;
+    font-size: 14px;
+  }
 }
 
 @media (max-width: 992px) {
