--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -10,83 +10,121 @@
 }
 
 .post-thumbnail {
-	margin-bottom: 0.5rem;
-	img {
-		width: 100%;
-		height: auto;
-	}
+  margin-bottom: 0.5rem;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
 }
+
 main {
-	p {
-		text-align: justify;
+  p {
+    text-align: justify;
     line-height: 1.6;
-		&:last-of-type {
-			margin: 0;
-		}
-	}
-	.img-thumbnail.float-left {
-		margin-right: 10px;
-	}
+
+    &:last-of-type {
+      margin: 0;
+    }
+  }
+
+  .img-thumbnail.float-left {
+    margin-right: 10px;
+  }
 }
+
 .article-meta {
-	padding: 5px 0;
+  padding: 5px 0;
   margin: .5rem 0;
-	border-top: 1px solid $light-gray;
-	border-bottom: 1px solid $light-gray;
-  .left-half,  .right-half {
+  border-top: 1px solid $light-gray;
+  border-bottom: 1px solid $light-gray;
+
+  .left-half,
+  .right-half {
     display: flex;
     align-items: center;
     color: $medium-gray;
     line-height: 1;
   }
+
   .right-half {
     justify-content: flex-end;
   }
-	a {
-		text-decoration: none;
+
+  a {
+    text-decoration: none;
     white-space: nowrap;
-		color: $medium-gray;
-		font-weight: 500;
-	}
-	strong {
-		padding: 0 4px;
-	}
-	img {
-		width: 40px;
-		height: 40px;
-	}
+    color: $medium-gray;
+    font-weight: 500;
+  }
+
+  strong {
+    padding: 0 4px;
+  }
+
+  img {
+    width: 40px;
+    height: 40px;
+  }
+
   .date {
     display: inline-block;
     margin-top: -2px;
   }
 }
+
 #print_btn {
-	.fa {
-		margin-right: 3px;
-	}
+  .fa {
+    margin-right: 3px;
+  }
 }
+
+/* Tag cloud*/
+.tag-cloud {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+
+  span {
+    display: inline-block;
+    padding: 6px 10px;
+    font-weight: 600;
+    line-height: 1;
+    color: darken($light-gray, 30%) !important;
+    border: 2px solid $light-gray;
+    color: inherit;
+    font-size: 12px;
+    margin-right: 5px;
+    margin-top: 5px;
+  }
+}
+
 
 /* Comments */
 .comment-form-wrapper {
-	margin-top: 1.5rem;
-	.form-group {
-		&:last-of-type {
-			margin-bottom: 0;
-		}
-	}
+  margin-top: 1.5rem;
+
+  .form-group {
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
 }
-  
+
 .comment {
   overflow: hidden;
   margin-bottom: 15px;
+
   &:last-child {
     margin-bottom: 0;
   }
-	.card-header {
-		font-size: $smaller-font;
+
+  .card-header {
+    font-size: $smaller-font;
     background: $body-bg;
     padding: 5px;
-	}
+  }
+
   .avatar {
     img {
       width: 30px;
@@ -95,9 +133,10 @@ main {
       margin-right: 5px;
     }
   }
-	p {
-		font-size: $smaller-font;
-	}
+
+  p {
+    font-size: $smaller-font;
+  }
 }
 
 .comment-actions {
@@ -107,6 +146,7 @@ main {
 
   li {
     margin-right: 10px;
+
     &:last-child {
       margin-right: 0;
     }
@@ -119,7 +159,7 @@ main {
 }
 
 @media (max-width: 992px) {
-	.right-half {
+  .right-half {
     display: none !important;
   }
 }
