Round corners for article tags

--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -95,6 +95,7 @@ main {
     border: 2px solid $light-gray;
     color: inherit;
     font-size: 12px;
+    border-radius: 0.125rem;
     margin-right: 5px;
     margin-top: 5px;
   }
