--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21484,6 +21484,7 @@ main .img-thumbnail.float-left {
   border: 2px solid #ddd;
   color: inherit;
   font-size: 12px;
+  border-radius: 0.125rem;
   margin-right: 5px;
   margin-top: 5px;
 }
